exports[`ban-ts-comment (ts-check) > invalid 1`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsDirectiveComment",
      "message": "Do not use \\"@ts-check\\" because it alters compilation errors.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 13
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment (ts-check) > invalid 2`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsDirectiveComment",
      "message": "Do not use \\"@ts-check\\" because it alters compilation errors.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 33
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment (ts-check) > invalid 3`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsDirectiveComment",
      "message": "Do not use \\"@ts-check\\" because it alters compilation errors.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 3,
          "column": 3
        },
        "end": {
          "line": 3,
          "column": 39
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment (ts-check) > invalid 4`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsDirectiveCommentRequiresDescription",
      "message": "Include a description after the \\"@ts-check\\" directive to explain why the @ts-check is necessary. The description must be 3 characters or longer.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 13
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment (ts-check) > invalid 5`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsDirectiveCommentRequiresDescription",
      "message": "Include a description after the \\"@ts-check\\" directive to explain why the @ts-check is necessary. The description must be 25 characters or longer.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 33
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment (ts-check) > invalid 6`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsDirectiveCommentDescriptionNotMatchPattern",
      "message": "The description for the \\"@ts-check\\" directive must match the ^: TS\\\\d+ because .+$ format.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 21
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment (ts-check) > invalid 7`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsDirectiveCommentDescriptionNotMatchPattern",
      "message": "The description for the \\"@ts-check\\" directive must match the ^: TS\\\\d+ because .+$ format.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 37
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment (ts-check) > invalid 8`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsDirectiveCommentRequiresDescription",
      "message": "Include a description after the \\"@ts-check\\" directive to explain why the @ts-check is necessary. The description must be 3 characters or longer.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 21
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment (ts-expect-error) > invalid 1`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsDirectiveComment",
      "message": "Do not use \\"@ts-expect-error\\" because it alters compilation errors.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 20
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment (ts-expect-error) > invalid 10`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsDirectiveCommentRequiresDescription",
      "message": "Include a description after the \\"@ts-expect-error\\" directive to explain why the @ts-expect-error is necessary. The description must be 3 characters or longer.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 2,
          "column": 1
        },
        "end": {
          "line": 3,
          "column": 31
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment (ts-expect-error) > invalid 11`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsDirectiveComment",
      "message": "Do not use \\"@ts-expect-error\\" because it alters compilation errors.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 24
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment (ts-expect-error) > invalid 12`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsDirectiveComment",
      "message": "Do not use \\"@ts-expect-error\\" because it alters compilation errors.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 40
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment (ts-expect-error) > invalid 13`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsDirectiveComment",
      "message": "Do not use \\"@ts-expect-error\\" because it alters compilation errors.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 42
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment (ts-expect-error) > invalid 14`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsDirectiveComment",
      "message": "Do not use \\"@ts-expect-error\\" because it alters compilation errors.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 3,
          "column": 3
        },
        "end": {
          "line": 3,
          "column": 46
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment (ts-expect-error) > invalid 15`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsDirectiveCommentRequiresDescription",
      "message": "Include a description after the \\"@ts-expect-error\\" directive to explain why the @ts-expect-error is necessary. The description must be 3 characters or longer.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 20
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment (ts-expect-error) > invalid 16`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsDirectiveCommentRequiresDescription",
      "message": "Include a description after the \\"@ts-expect-error\\" directive to explain why the @ts-expect-error is necessary. The description must be 10 characters or longer.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 26
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment (ts-expect-error) > invalid 17`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsDirectiveCommentRequiresDescription",
      "message": "Include a description after the \\"@ts-expect-error\\" directive to explain why the @ts-expect-error is necessary. The description must be 25 characters or longer.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 40
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment (ts-expect-error) > invalid 18`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsDirectiveCommentDescriptionNotMatchPattern",
      "message": "The description for the \\"@ts-expect-error\\" directive must match the ^: TS\\\\d+ because .+$ format.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 28
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment (ts-expect-error) > invalid 19`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsDirectiveCommentDescriptionNotMatchPattern",
      "message": "The description for the \\"@ts-expect-error\\" directive must match the ^: TS\\\\d+ because .+$ format.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 44
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment (ts-expect-error) > invalid 2`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsDirectiveComment",
      "message": "Do not use \\"@ts-expect-error\\" because it alters compilation errors.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 23
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment (ts-expect-error) > invalid 20`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsDirectiveCommentRequiresDescription",
      "message": "Include a description after the \\"@ts-expect-error\\" directive to explain why the @ts-expect-error is necessary. The description must be 3 characters or longer.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 28
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment (ts-expect-error) > invalid 3`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsDirectiveComment",
      "message": "Do not use \\"@ts-expect-error\\" because it alters compilation errors.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 2,
          "column": 1
        },
        "end": {
          "line": 3,
          "column": 20
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment (ts-expect-error) > invalid 4`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsDirectiveComment",
      "message": "Do not use \\"@ts-expect-error\\" because it alters compilation errors.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 2,
          "column": 1
        },
        "end": {
          "line": 3,
          "column": 22
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment (ts-expect-error) > invalid 5`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsDirectiveComment",
      "message": "Do not use \\"@ts-expect-error\\" because it alters compilation errors.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 2,
          "column": 1
        },
        "end": {
          "line": 3,
          "column": 23
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment (ts-expect-error) > invalid 6`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsDirectiveCommentRequiresDescription",
      "message": "Include a description after the \\"@ts-expect-error\\" directive to explain why the @ts-expect-error is necessary. The description must be 10 characters or longer.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 2,
          "column": 1
        },
        "end": {
          "line": 3,
          "column": 29
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment (ts-expect-error) > invalid 7`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsDirectiveCommentRequiresDescription",
      "message": "Include a description after the \\"@ts-expect-error\\" directive to explain why the @ts-expect-error is necessary. The description must be 25 characters or longer.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 2,
          "column": 1
        },
        "end": {
          "line": 3,
          "column": 43
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment (ts-expect-error) > invalid 8`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsDirectiveCommentDescriptionNotMatchPattern",
      "message": "The description for the \\"@ts-expect-error\\" directive must match the ^: TS\\\\d+ because .+$ format.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 2,
          "column": 1
        },
        "end": {
          "line": 3,
          "column": 31
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment (ts-expect-error) > invalid 9`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsDirectiveCommentDescriptionNotMatchPattern",
      "message": "The description for the \\"@ts-expect-error\\" directive must match the ^: TS\\\\d+ because .+$ format.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 2,
          "column": 1
        },
        "end": {
          "line": 3,
          "column": 35
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment (ts-ignore) > invalid 1`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsIgnoreInsteadOfExpectError",
      "message": "Use \\"@ts-expect-error\\" instead of \\"@ts-ignore\\", as \\"@ts-ignore\\" will do nothing if the following line is error-free.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 14
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment (ts-ignore) > invalid 10`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsIgnoreInsteadOfExpectError",
      "message": "Use \\"@ts-expect-error\\" instead of \\"@ts-ignore\\", as \\"@ts-ignore\\" will do nothing if the following line is error-free.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 2,
          "column": 1
        },
        "end": {
          "line": 3,
          "column": 37
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment (ts-ignore) > invalid 11`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsIgnoreInsteadOfExpectError",
      "message": "Use \\"@ts-expect-error\\" instead of \\"@ts-ignore\\", as \\"@ts-ignore\\" will do nothing if the following line is error-free.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 34
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment (ts-ignore) > invalid 12`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsIgnoreInsteadOfExpectError",
      "message": "Use \\"@ts-expect-error\\" instead of \\"@ts-ignore\\", as \\"@ts-ignore\\" will do nothing if the following line is error-free.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 36
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment (ts-ignore) > invalid 13`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsIgnoreInsteadOfExpectError",
      "message": "Use \\"@ts-expect-error\\" instead of \\"@ts-ignore\\", as \\"@ts-ignore\\" will do nothing if the following line is error-free.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 3,
          "column": 3
        },
        "end": {
          "line": 3,
          "column": 40
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment (ts-ignore) > invalid 14`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsDirectiveCommentRequiresDescription",
      "message": "Include a description after the \\"@ts-ignore\\" directive to explain why the @ts-ignore is necessary. The description must be 3 characters or longer.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 14
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment (ts-ignore) > invalid 15`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsDirectiveCommentRequiresDescription",
      "message": "Include a description after the \\"@ts-ignore\\" directive to explain why the @ts-ignore is necessary. The description must be 3 characters or longer.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 23
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment (ts-ignore) > invalid 16`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsDirectiveCommentRequiresDescription",
      "message": "Include a description after the \\"@ts-ignore\\" directive to explain why the @ts-ignore is necessary. The description must be 3 characters or longer.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 19
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment (ts-ignore) > invalid 17`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsDirectiveCommentRequiresDescription",
      "message": "Include a description after the \\"@ts-ignore\\" directive to explain why the @ts-ignore is necessary. The description must be 25 characters or longer.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 34
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment (ts-ignore) > invalid 18`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsDirectiveCommentDescriptionNotMatchPattern",
      "message": "The description for the \\"@ts-ignore\\" directive must match the ^: TS\\\\d+ because .+$ format.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 22
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment (ts-ignore) > invalid 19`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsDirectiveCommentDescriptionNotMatchPattern",
      "message": "The description for the \\"@ts-ignore\\" directive must match the ^: TS\\\\d+ because .+$ format.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 38
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment (ts-ignore) > invalid 2`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsIgnoreInsteadOfExpectError",
      "message": "Use \\"@ts-expect-error\\" instead of \\"@ts-ignore\\", as \\"@ts-ignore\\" will do nothing if the following line is error-free.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 14
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment (ts-ignore) > invalid 20`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsDirectiveCommentRequiresDescription",
      "message": "Include a description after the \\"@ts-ignore\\" directive to explain why the @ts-ignore is necessary. The description must be 3 characters or longer.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 22
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment (ts-ignore) > invalid 3`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsIgnoreInsteadOfExpectError",
      "message": "Use \\"@ts-expect-error\\" instead of \\"@ts-ignore\\", as \\"@ts-ignore\\" will do nothing if the following line is error-free.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 14
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment (ts-ignore) > invalid 4`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsIgnoreInsteadOfExpectError",
      "message": "Use \\"@ts-expect-error\\" instead of \\"@ts-ignore\\", as \\"@ts-ignore\\" will do nothing if the following line is error-free.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 17
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment (ts-ignore) > invalid 5`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsIgnoreInsteadOfExpectError",
      "message": "Use \\"@ts-expect-error\\" instead of \\"@ts-ignore\\", as \\"@ts-ignore\\" will do nothing if the following line is error-free.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 2,
          "column": 1
        },
        "end": {
          "line": 3,
          "column": 15
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment (ts-ignore) > invalid 6`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsIgnoreInsteadOfExpectError",
      "message": "Use \\"@ts-expect-error\\" instead of \\"@ts-ignore\\", as \\"@ts-ignore\\" will do nothing if the following line is error-free.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 2,
          "column": 1
        },
        "end": {
          "line": 3,
          "column": 16
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment (ts-ignore) > invalid 7`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsIgnoreInsteadOfExpectError",
      "message": "Use \\"@ts-expect-error\\" instead of \\"@ts-ignore\\", as \\"@ts-ignore\\" will do nothing if the following line is error-free.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 2,
          "column": 1
        },
        "end": {
          "line": 3,
          "column": 17
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment (ts-ignore) > invalid 8`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsIgnoreInsteadOfExpectError",
      "message": "Use \\"@ts-expect-error\\" instead of \\"@ts-ignore\\", as \\"@ts-ignore\\" will do nothing if the following line is error-free.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 18
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment (ts-ignore) > invalid 9`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsIgnoreInsteadOfExpectError",
      "message": "Use \\"@ts-expect-error\\" instead of \\"@ts-ignore\\", as \\"@ts-ignore\\" will do nothing if the following line is error-free.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 2,
          "column": 1
        },
        "end": {
          "line": 3,
          "column": 23
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment (ts-nocheck) > invalid 1`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsDirectiveComment",
      "message": "Do not use \\"@ts-nocheck\\" because it alters compilation errors.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 15
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment (ts-nocheck) > invalid 2`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsDirectiveComment",
      "message": "Do not use \\"@ts-nocheck\\" because it alters compilation errors.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 15
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment (ts-nocheck) > invalid 3`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsDirectiveComment",
      "message": "Do not use \\"@ts-nocheck\\" because it alters compilation errors.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 35
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment (ts-nocheck) > invalid 4`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsDirectiveCommentRequiresDescription",
      "message": "Include a description after the \\"@ts-nocheck\\" directive to explain why the @ts-nocheck is necessary. The description must be 3 characters or longer.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 15
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment (ts-nocheck) > invalid 5`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsDirectiveCommentRequiresDescription",
      "message": "Include a description after the \\"@ts-nocheck\\" directive to explain why the @ts-nocheck is necessary. The description must be 25 characters or longer.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 35
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment (ts-nocheck) > invalid 6`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsDirectiveCommentDescriptionNotMatchPattern",
      "message": "The description for the \\"@ts-nocheck\\" directive must match the ^: TS\\\\d+ because .+$ format.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 23
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment (ts-nocheck) > invalid 7`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsDirectiveCommentDescriptionNotMatchPattern",
      "message": "The description for the \\"@ts-nocheck\\" directive must match the ^: TS\\\\d+ because .+$ format.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 39
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment (ts-nocheck) > invalid 8`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsDirectiveCommentRequiresDescription",
      "message": "Include a description after the \\"@ts-nocheck\\" directive to explain why the @ts-nocheck is necessary. The description must be 3 characters or longer.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 23
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment (ts-nocheck) > invalid 9`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsDirectiveComment",
      "message": "Do not use \\"@ts-nocheck\\" because it alters compilation errors.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 2,
          "column": 2
        },
        "end": {
          "line": 2,
          "column": 16
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;
